[package]
name = "tube_core"
version = "0.1.0"
authors = ["Y Dung Kuan<ydungkuan@outlook.com>"]
edition = "2021"

[features]
nan_boxing = []
gc_log_mark = []
gc_log_free = []
gc_log_alloc = []
gc_stress = []

[lib]
name = "tube_core"
path = "src/lib.rs"

[dependencies]
tube_env = { path = "../env" }
fnv = "1.0.7"
hashbrown = "0.13.2"