[package]
name = "tube_lib"
version = "0.1.0"
authors = ["Y Dung Kuan<ydungkuan@outlook.com>"]
edition = "2021"

[features]
default = ["desktop"]
wasm = ["js-sys"]
desktop = ["rand"]

[lib]
name = "tube_lib"
path = "src/lib.rs"

[dependencies]
tube_core = { path = "../core" } # , features = ["nan_boxing"]
tube_env = { path = "../env" }
tube_native = { path = "../native" }
hashbrown = "0.13.2"
js-sys = { version = "0.3.60", optional = true }
fnv = "1.0.7"
rand = { version = "0.8.5", optional = true }
regex = "1.7.1"

[dev-dependencies]
criterion = "0.4.0"
