[package]
name = "tube_vm"
version = "0.1.0"
authors = ["Y Dung Kuan<ydungkuan@outlook.com>"]
edition = "2021"

[features]
debug = []
wasm = ["tube_lib/wasm"]

[lib]
name = "tube_vm"
path = "src/lib.rs"

[dependencies]
tube_core = { path = "../core",  features=["nan_boxing"] }
# gc_stress
# gc_log_alloc
# gc_log_free
# gc_log_mark
tube_lib = { path = "../lib" }
tube_env = { path = "../env" }
tube_native = { path = "../native" }
fnv = "1.0.7"
codespan = "0.11.1"
variant_count = "1.1.0"
codespan-reporting = "0.11.1"
bumpalo = { version = "3.12.0", features=["boxed", "collections"] }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "vm_benches"
harness = false

[[bench]]
name = "compiler_benches"
harness = false

[[bench]]
name = "parser_benches"
harness = false