[package]
name = "tube_wasm"
version = "0.1.0"
authors = ["Y Dung Kuan <ydungkuan@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib"]

[dependencies]
tube_vm = { path = "../vm", features=["wasm"] }
tube_env = { path = "../env" }
tube_core = { path = "../core" }

wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
termcolor = "1.2.0"
web-sys = { version = "0.3.61", features = ["console"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
